--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.4",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.43.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.27.0",
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3"
   }
 }
