--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "18.0.9",
     "eslint-config-next": "13.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "framer-motion": "^7.6.7",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "scroller-motion": "^1.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.43.0",
