--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "eslint-config-next": "13.0.4",
     "eslint-config-prettier": "^8.5.0",
     "framer-motion": "^7.6.7",
+    "lodash": "^4.17.21",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "scroller-motion": "^1.2.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.27.0",
