--- a/package.json
+++ b/package.json
@@ -9,27 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.0.4",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "eslint-config-next": "13.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "framer-motion": "^7.6.7",
+    "@types/node": "^20.17.10",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "eslint-config-next": "^15.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^10.18.0",
     "lodash": "^4.17.21",
-    "next": "13.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.1.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "scroller-motion": "^1.2.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@typescript-eslint/parser": "^5.43.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.27.0",
-    "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "@typescript-eslint/parser": "^8.19.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.18.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
